refactor!: Cannot run as service - only as a library